--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.1075834373984-1pm1tg2176i3b8r9dn10akffcpknqmt6</string>
+				<string>com.googleusercontent.apps.xxxxxxxxxx-xxxxxxxxxx</string>
 			</array>
 		</dict>
 	</array>
