--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -22,9 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  pin_entry_text_field: ^0.1.4
-  firebase_auth: ^0.15.4
+  cupertino_icons: ^1.0.6
+  firebase_auth: ^4.17.4
+  firebase_core: ^2.25.4
+  otp_pin_field: ^1.2.2
 
 dev_dependencies:
   flutter_test:
